--- a/cherkashin-et-al-itams-2021.tex
+++ b/cherkashin-et-al-itams-2021.tex
@@ -95,21 +95,21 @@ url=http://www.crust.irk.ru/member_88.html,
 
 \section{Introduction}
 
-Contemporary Web technologies development is aimed at more tight data integration: standardization of data publishing formats, formal data and metadata representation, unifying interpretation contexts, referring external entities.  Geospatially related objects are frequently published in the requirements as well.
+Contemporary Web technologies development is aimed at more tight data integration: standardization of data publishing formats, formal data and metadata representation, unifying interpretation contexts, referring to external entities.  Geospatially related objects are frequently published in the requirements as well.
 
-Geospatial data are of primary interest of people as many human activities are attached to object located on the Earth's surface.  There are lot of on-line services helping users to navigate, figure out the places corresponding the required conditions (shopping centers, parking places, \emph{etc.}), observation of a territories to familiarize themselves.  The objects of interest as any data objects are described with attributes of various kinds, like working hours of firms, their home site URLs, nearby bus stations.  At present, these software trend to allow integration with their data via open formats and publishing principles, \emph{e.g.}, Linked Open Data.
+Geospatial data are of primary interest of people as many human activities are attached to object located on the Earth's surface.  There are a lot of on-line services helping users to navigate, figure out the places corresponding the required conditions (shopping centers, parking places, \emph{etc.}), observation of territories to familiarize themselves.  The objects of interest as any data objects are described with attributes of various kinds, like working hours of firms, their home site URLs, nearby bus stations.  At present, these software products trend to allow integration with their data via open formats and publishing principles, \emph{e.g.}, Linked Open Data.
 
-In this investigation the fault data are chosen as subject for representation and publishing.  Geological field investigations and event observations, \emph{e.g.}, earthquakes, accumulate data, which are analyzed, resulting in setting new attributes to a fault or their refinement.  According to the techniques of geological research additional information are associated with attributes clarifying their values.  Such clarification comprises precision characteristics, measurement conditions, reliability assessment, and paper references, where fault data were published.
+In this investigation, the fault data are chosen as subject for representation and publishing.  Geological field investigations and event observations, \emph{e.g.}, earthquakes, accumulate data, which are analyzed, resulting in setting new attributes to a fault or their refinement.  According to the techniques of geological research, additional information are associated with attributes, clarifying their values.  Such clarification comprises precision characteristics, measurement conditions, reliability assessment, and paper references, where fault data were published.
 
-GIS\footnote{Abbreviation of Geographical Information System} represents spatial data in semantic defined layers.  For each object of a layer, one can associate a set of attribute values of auxiliary data.  The set of the attributes are the same for each object of the layer regardless of wether the attribute value is defined for an object or not.  Empty values are represented as ``\texttt{null}''s.  In the case of geological exploration, when a lot of attributes are undefined, this approach leads to sparse filled tables.  This, in turn, requires data modification and analysis algorithms to utilize additional data checking stages when using standard relation operations (SELECT, UPDATE, DELETE).
+GIS\footnote{Abbreviation of Geographical Information System} represents spatial data in semantic defined layers.  For each object of a layer, one can associate a set of attribute values of auxiliary data.  The set of the attributes are the same for each object of the layer regardless of whether the attribute value is defined for an object or not.  Empty values are represented as ``\texttt{null}''s.  In the case of geological exploration, when a lot of attributes are undefined, this approach leads to sparse filled tables.  This, in turn, requires data modification and analysis algorithms to utilize additional data checking stages when using standard relation operations (SELECT, UPDATE, DELETE).
 
-Another question is attribute names definition expressing semantics of metadata.  For example, to define a precision of a value one could construct an attribute name with ``\texttt{\_prec}'' suffix, where name is its value attribute identifier.  Other types of metadata add more suffixes, as well as relations between suffixes and values are not defined anywhere in database.  The formal definition is to be defined in a documentation or processing algorithms, thus, either informally defined or obfuscated, and practically not alienated.  Adding new attributes requires user to devise new synthetic names.
+Another question is attribute names definition expressing semantics of metadata.  For example, to define a precision of a value one could construct an attribute name with ``\texttt{\_prec}'' suffix, where name is its value attribute identifier.  Other types of metadata add more suffixes, as well as relations between suffixes and values are not defined anywhere in the database.  The formal definition is to be defined in a documentation or processing algorithms, thus, either informally defined or obfuscated, and practically not alienated.  Adding new attributes requires the user to devise new synthetic names.
 
 Web publication applications, as information systems, are to implement filtering functions, differentiating the value attributes and their metadata.  Screen widgets label names either defined in application or figured out from the attribute names.  Lack of ontological (vocabulary) formal domain definition forces developer to spend more efforts for user interface implementation.
 
-Since 2001 Semantic Web technologies have evolved in a substantial set of instruments for data storing, publishing, and software integration, allowing system designers and programmers, among standard means, pass data between systems via published documents and application user interfaces, \emph{i.e.}, extending their set of functions.  Vocabularies and data instances are stored in graph databases, which provide SPARQL and other endpoints on top of HTTP protocols, enabling similar services as relational database servers for data access and modification.  The generalized problem statements and approaches to their solutions in the field of Semantic Web are the reasons of its constant development.
+Since 2001 Semantic Web technologies have evolved in a substantial set of instruments for data storing, publishing, and software integration, allowing system designers and programmers, among standard means, to pass data between systems via published documents and application user interfaces, \emph{i.e.}, extending their set of functions.  Vocabularies and data instances are stored in graph databases, which provide SPARQL and other endpoints on top of HTTP protocols, enabling similar services as relational database servers for data access and modification.  The generalized problem statements and approaches to their solutions in the field of Semantic Web are the reasons of its constant development.
 
-Knowledge graphs (KG) \cite{hogan} are techniques of Sematic Web usage aimed at representation data in a general flexible way allowing so-called ``natural'' evolving of domain image, including representation of incomplete knowledge.  This evolution correspond to a scientific research process, where data is accumulated and analyzed.  KG enables both providing in addition distributed storage, federated query based access and modification, means for metadata definition, and formalized verification of its content.
+Knowledge graphs (KG) \cite{hogan} are techniques of Semantic Web usage aimed at representation of data in a general flexible way allowing so-called ``natural'' evolving of domain image, including representation of incomplete knowledge.  This evolution corresponds to a scientific research process, where data is accumulated and analyzed.  KG enables both providing in addition distributed storage, federated query based access and modification, means for metadata definition, and formalized verification of its content.
 
 The aim of this research and development is to represent existing tabular and spatial data from \cite{lunina,afs} as a knowledge graph with implementing a viewer, assessing ``working efficiency'' of a programmer and ``usability'' of KG services.  State further development perspectives, ranging them by priorities.
 
@@ -168,9 +168,9 @@ Definition Table
   \label{fig:db-struct}
 \end{figure}
 
-  Identifiers of the attributes with common prefixes define one value with a clarification, \emph{e.g.}, ``\texttt{Depth}'' and ``\texttt{Length}'' of a fault ar measured in kilometers, their values are clarified with ``quality'' attribute having suffix ``\texttt{\_Q}'' at the end.
+  Identifiers of the attributes with common prefixes define one value with a clarification, \emph{e.g.}, ``\texttt{Depth}'' and ``\texttt{Length}'' of a fault are measured in kilometers, their values are clarified with ``quality'' attribute having suffix ``\texttt{\_Q}'' at the end.
 
-  Table content slice of the fault database is shown in Figure~\ref{fig:db-slice}.  It is sparse filled: many attributes are \texttt{null}s.  The field ``\texttt{Geomorphol\ldots}'' and some others is filled with values of predefined sets.  The consistency are controlled algorithmically with QGIS extension modules.  This flat structure and representation format are intended to be easily accessed and realized with standard relational database tools, but general violations of standard normal forms forces developer to implement additional subroutines controlling a record content (semantics) in addition to the UPDATE DML\footnote{Abbreviation of Data Manipulation Language.} command.
+  Table content slice of the fault database is shown in Figure~\ref{fig:db-slice}.  It is sparse filled: many attributes are \texttt{null}s.  The field ``\texttt{Geomorphol\ldots}'' and some others is filled with values of predefined sets.  The consistency are controlled algorithmically with QGIS extension modules.  This flat structure and representation format are intended to be easily accessed and realized with standard relational database tools, but general violations of standard normal forms forces the developer to implement additional subroutines controlling a record content (semantics) in addition to the UPDATE DML\footnote{Abbreviation of Data Manipulation Language.} command.
 
   \begin{figure}
     \centering
@@ -179,9 +179,9 @@ Definition Table
     \label{fig:db-slice}
   \end{figure}
 
-Conversion started with defining T-Box\footnote{Abbreviation of Terminological Box, a set of basis domain terms and their relationships.} comprising the class of fault and its subclasses.  Subclasses correspond to various kinds of faults, \emph{e.g.}, normal, reverse, strike-slip, oblique.  As a differentiating property, ``\texttt{Slip\_sense}'' attribute used.  All the fault records when converted and assigned a class formed A-Box\footnote{Denotation of Instance Box, a set of the instances.}, a database of faults.  Non-\texttt{null} attributes of faults were converted into a literal relation, except those, which values were restricted to a finite set.  These attribute values presented as references to a descriptive constant added to T-Box.  These conversions were implemented as Python program loading \texttt{DBF}-files and generation \texttt{OWL2} \texttt{XML} ones.  After the conversion, the obtained \texttt{OWL}s of T-Box and A-Box were visually checked with Protege, saved into Turtle (\texttt{ttl}) format.
+Conversion started with defining T-Box\footnote{Abbreviation of Terminological Box, a set of basis domain terms and their relationships.} comprising the class of fault and its subclasses.  Subclasses correspond to various kinds of faults, \emph{e.g.}, normal, reverse, strike-slip, oblique.  As a differentiating property, ``\texttt{Slip\_sense}'' attribute used.  All the fault records when converted and assigned a class formed A-Box\footnote{Denotation of Instance Box, a set of the instances.}, a database of faults.  Non-\texttt{null} attributes of faults were converted into a literal relation, except those, which values were restricted to a finite set.  These attribute values presented as references to a descriptive constant added to T-Box.  These conversions were implemented as Python program loading \texttt{DBF}-files and generation \texttt{OWL2} \texttt{XML} ones.  After the conversion, the obtained \texttt{OWL}s of T-Box and A-Box were visually checked with Protégé, saved into Turtle (\texttt{ttl}) format.
 
-The results of conversions were manually loaded into GraphDB and Jena KG servers.  For each part (T- and A-Box) a global namespace (\texttt{aft}, \texttt{af}) were allocated: \url{http://irnok.net/ontologies/ActiveFaultTerms\#} and \href{http://irnok.net/ontologies/ActiveFault\#}{\ldots/ActiveFault\#}.  In the software, for each KG one must set up individual endpoint providing access.  GraphDB user interface were used for check the correctness of class-instance relations with executing SPARQL-queries.  The peculiarity of GraphDB usage is the necessity to ``activate'' each KG endpoint via user interface after loading their KG contents.  After conversion and set up of the endpoint they will be available at port 7200, URL will be formed out of server address and endpoint name.  An example of a converted item is shown here
+The results of conversions were manually loaded into GraphDB and Jena KG servers.  For each part (T- and A-Box) a global namespace (\texttt{aft}, \texttt{af}) were allocated: \url{http://irnok.net/ontologies/ActiveFaultTerms\#} and \href{http://irnok.net/ontologies/ActiveFault\#}{\ldots/ActiveFault\#}.  In the software, for each KG one must set up an individual endpoint providing access.  GraphDB user interface were used to check the correctness of class-instance relations with executing SPARQL-queries.  The peculiarity of GraphDB usage is the necessity to ``activate'' each KG endpoint via user interface after loading their KG contents.  After conversion and set up of the endpoint they will be available at port 7200, URL will be formed out of server address and endpoint name.  An example of a converted item is shown here
 
 \begin{multicols}{2}\tiny
   \begin{verbatim}
@@ -242,9 +242,9 @@ af:RUAF_996 rdf:type owl:NamedIndividual ,
 
 Our viewer is a Web-2.0 application composed out of React components.  The application maintains its state with Redux. Properly used Redux allows one to control viewer widgets content and structures solely by defining state change functions.
 
-Rendering maps is based on React wrapper of \texttt{leaflet.js} library.  Library allows one to draw interactive graphics objects (polygons) on a topological basis.  Leaflet supports various sources, such as \href{https://openstreetmap.org/}{openstrrtmpa.org}, whish is default one.  Fault shapes were converted from \texttt{KML} format to leaflet interpretable \texttt{JSON} and are being loaded by application on demand from web server.
+Rendering maps is based on React wrapper of \texttt{leaflet.js} library.  The library allows one to draw interactive graphics objects (polygons) on a topological basis.  Leaflet supports various sources, such as \href{https://openstreetmap.org/}{openstrrtmpa.org}, which is default one.  Fault shapes were converted from \texttt{KML} format to leaflet interpretable \texttt{JSON} and are being loaded by application on demand from web server.
 
-By default viewer shows all faults from KG, the result of a SPARQL query requesting all objects of a class \texttt{aft:Fault}\footnote{\url{http://irnok.net/ontologies/ActiveFaultTerms\#Fault}}, \emph{i.e.} all the instances\footnote{All faults are instances of \texttt{aft:Fault}}.  There is a form in the user interface for setting filtering conditions.  They change the default SPARQL query adding restrictions.  For the debugging and developing, one version of the viewer contains a form for free-form SPARQL query definition, which execution results also showed as a fault map.
+By default, viewer shows all faults from KG, the result of a SPARQL query requesting all objects of a class \texttt{aft:Fault}\footnote{\url{http://irnok.net/ontologies/ActiveFaultTerms\#Fault}}, \emph{i.e.} all the instances\footnote{All faults are instances of \texttt{aft:Fault}}.  There is a form in the user interface for setting filtering conditions.  They change the default SPARQL query, adding restrictions.  For the debugging and developing, one version of the viewer contains a form for free-form SPARQL query definition, which execution results also showed as a fault map.
 
 Viewing fault attributes is implemented as a form document improved with \texttt{RDFa} markup.  This markup originates from results of SPARQL query selecting all the predicate relation for the chosen fault.
 %
@@ -272,7 +272,7 @@ A core for a web of spatial open data. Semantic Web 3 (2012) 333–354. \doi{10.
   \item Developed a taxonomy of the objects on a various levels (Road~\to~Way (list of nodes)) % and Fig 3 of the LGD paper.
   \item Stated the relations between nodes and ways defining complex objects
   \item Implemented REST and SPARQL (does not work now) endpoints for actual data
-  \item Had a live updates services from OSM changesets.
+  \item Had a live updates services from OSM change sets.
   \end{itemize}
 
 
@@ -296,7 +296,7 @@ Information System. International Conference on Information Technology for Organ
     \item SPARQL used to query DBPedia
     \item Viewing DBPedia data with Data Table plug-in of JQuery
     \end{itemize}
-  \item Test application allows user querying celebrities by their home town/city pointed by mouse on the Google Map.
+  \item Test application allows user querying celebrities by their hometown/city pointed by mouse on the Google Map.
   \end{itemize}
 
    The project\footnote{Adam Iwaniak, Marta Leszczuk, Marek Strzelecki, Francis Harvey, Iwona Kaczmarek. A Novel Approach for Publishing Linked Open Geodata from National Registries with the Use of Semantically Annotated Context Dependent Web Pages. International Journal of Geo-Information. 6, 252, 2017. \doi{10.3390/ijgi6080252}} goal is to convert existing GIS data into explicit knowledge, thus, forming a Spatial Data Infrastructure (SDI).
@@ -312,20 +312,20 @@ Information System. International Conference on Information Technology for Organ
 
   Speak about improving KG with spatial processing and expert systems.
 
-  Another interesting project is ... viewing the celebrities data querying SPARQL endpoint of DBPedia.org.
+  Another interesting project is ... viewing the celebrities' data querying SPARQL endpoint of DBPedia.org.
 
 \section{Future activity plan}
 
 Improve the structure of the fault KG
-Extend structure with textual, documental attributes and widgets showing their content.
-Implement more on-demand interface elemetnts filling in. and Ability to chose @similar@ objects.
+Extend structure with textual, document attributes and widgets showing their content.
+Implement more on-demand interface elements filling in. and Ability to chose @similar@ objects.
 Implement editing of the KG and spatial data, \emph{i.e.}, adopt the corresponding leaflet functionality.
 
  Bidirectional versioned data transfer between user GIS (QGIS, OSM Mapnik, Leaflet) and the SW storage
 
 Attach existing World fault data resources to the viewer
 
-   Implement various analytical functionality for domain problem solving
+   Implement various analytical functionality for domain problem-solving
 
    Natural language interface
 
